# Nova-Core-1

.github/workflows/: build.yml
app/src/main/cpp/: CMakeLists.txt  nova_dex_decrypt.cpp
app/src/main/java/com/cristal/bristral/tristal/mistral/: InstallActivity.kt  InstallReceiver.kt  LauncherApplication.kt  MainActivity.kt  NovaDexLoader.kt  SecondActivity.kt
tools/: encrypt_nova_dex.py
